Revelation changelog

---------------[ xxxx-xx-xx : 0.4.4 ]---------------

2005-08-04  Erik Grinaker <erikg@codepoet.no>

	* the UIManager wrapper now respects is-important attributes

	* added option for setting the toolbar style

	* added an applet icon for locked file

	* reordered options in applet prefs

2005-08-04  Erik Grinaker <erikg@codepoet.no>

	* renamed authmanager module to gnomemisc

	* adapted to changes in gnome-python 2.10

	* rearranged the toolbar layout

	* wrapped panel_applet_request_focus()

2005-08-03  Erik Grinaker <erikg@codepoet.no>

	* cleaned up applet code

	* moved wrap/ to src/wrap/

	* the searchbar entry gets focus on startup if shown

	* various applet ui improvements

2005-07-26  Erik Grinaker <erikg@codepoet.no>

	* applet reruns password dialog when entering wrong password

2005-07-26  Erik Grinaker <erikg@codepoet.no>

	* avoid showing duplicates of non-modal dialogs

	* applet display popups now has name of entry as title

	* don't crash when removing applet from panel

	* added applet options for displaying password and
	copying username to clipboard as chain

	* bumped version to 0.4.4

2005-07-12  Erik Grinaker <erikg@codepoet.no>

	* implemented initial applet searching

	* a few applet ui improvements

2005-07-06  Erik Grinaker <erikg@codepoet.no>

	* improved the applet button behavior

2005-07-01  Erik Grinaker <erikg@codepoet.no>

	* made middle-button click on applet button move applet

2005-06-30  Erik Grinaker <erikg@codepoet.no>

	* moved Timer class from ui module to data module

	* passwords are removed from clipboard after 60 seconds

	* made password labels unselectable when hiding passwords

	* added drag/drop to password labels when hiding passwords

2005-06-28  Erik Grinaker <erikg@codepoet.no>

	* changed default action for applet menu to "show", not "goto"

	* reordered applet prefs for menu action

2005-06-27  Erik Grinaker <erikg@codepoet.no>

	* added frame around applet entry view
